# fichawork

./: .gitignore  Cargo.toml
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/api/: apiClient.ts
src/: auth.rs  db.rs  errors.rs  main.rs  openapi.rs  routes.rs
src/entities/: mod.rs  prelude.rs  shift_entry.rs  shifts.rs  users.rs
src/models/: auth.rs  user.rs
src/repositories/: users.rs
src/routes/: mod.rs
src/services/: auth.rs  users.rs
src/utils/: encryption.rs  jwt.rs
